--- a/style.css
+++ b/style.css
@@ -1,46 +1,74 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
+/* Colors */
+
+:root {
+    --main-color: #111e27;
+    --secondary-color: #004049;
+    --border-color: #075985;
+}
+
+/* Images and svg */
+
+.icon {
+    height: 10px;
+    width: 10px;
+}
+
+img {
+    height: 100px;
+    width: 100px;
+}
+
+/* Container config */
+
 .container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+}
+
+.grid-container {
+    height: 100%;
+    width: 100%;
     display: grid;
-    grid-template-columns: 2fr 7fr 2fr;
+    grid-template-columns: minmax(100px, 1.5fr) minmax(400px, 8.5fr)
 }
 
 /* Side Bar */
 
 .side-bar {
+    background-color: var(--main-color);
     grid-column: 1 / 2;
 }
 
-.icon {
-    width: 35px;
-    height: 35px;
-}
-
-
-/* Main Content */
+/* Main content */
 
 .main-content {
+    background-color: var(--secondary-color);
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: minmax(300px, 4fr) minmax(100px, 1fr);
+
+}
+
+.header {
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: minmax(300px, 4fr) minmax(100px, 1fr);
+}
+
+.search-bar {
+    grid-column: 1 / 2;
+}
+
+.profile {
     grid-column: 2 / 3;
 }
 
-
-/* Right Bar */
-
-.right-bar {
-    grid-column: 3 / 4;
+.statistics-container {
+    grid-column: 2 / 3;
 }
-
-#profile-photo {
-    border-radius: 100%;
-    width: 100px;
-    height: 100px;
-    border: 2px solid black;
-}
-
-.statistics-photo {
-    width: 300px;
-}
-
