--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: Permanent-Marker , cursive;
+    font-weight: 300;
+    color: var(--font-color);
+}
+
+body {
+    background-color: var(--secondary-color);
+}
+
+@font-face {
+    font-family: Permanent-Marker;
+    src: url(icons/Permanent_Marker/PermanentMarker-Regular.ttf);
 }
 
 /* Colors */
@@ -8,14 +20,15 @@
 :root {
     --main-color: #111e27;
     --secondary-color: #004049;
-    --border-color: #075985;
+    --border-color: black;
+    --font-color: white;
 }
 
 /* Images and svg */
 
 .icon {
-    height: 10px;
-    width: 10px;
+    filter: invert(100%);
+    height: 35px;
 }
 
 img {
@@ -42,8 +55,52 @@ img {
 
 .side-bar {
     background-color: var(--main-color);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     grid-column: 1 / 2;
+    display: grid;
+    grid-template-rows: minmax(30px, 1fr) minmax(40px, 9fr);
+    border: 1px solid var(--border-color);
+
 }
+
+.logo {
+    display: grid;
+    grid-template-columns: minmax(10px, 1fr) minmax(40px, 4fr);
+    grid-gap: 10px;
+}
+
+.icon.ball {
+    grid-column: 1 / 2;
+    justify-self: self-start;
+    align-self: self-start;
+}
+
+.logo-h1 {
+    grid-column: 2 / 3;
+    justify-self: self-start;
+    align-self: self-start;
+}
+
+.side-bar-access {
+    display: grid;
+    grid-template-rows: minmax(100px, 5fr) minmax(30px, 1fr);
+}
+
+.side-bar-superior-part > div, .side-bar-inferior-part > div{
+    display: flex;
+    padding: 5px;
+    margin-right: 4px;
+
+}
+
+.side-bar-superior-part > div:hover, .side-bar-inferior-part > div:hover {
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+    font-size: 1.3rem;
+}
+
+
 
 /* Main content */
 
@@ -51,24 +108,226 @@ img {
     background-color: var(--secondary-color);
     grid-column: 2 / 3;
     display: grid;
-    grid-template-columns: minmax(300px, 4fr) minmax(100px, 1fr);
+    grid-template-columns: minmax(300px, 3.8fr) minmax(100px, 1.2fr);
+    grid-template-rows: minmax(30px, 0.3fr) minmax(100px, 3fr);
 
+}
+
+.card-grid-container {
+    display: grid;
+    grid-template-rows: repeat(5, minmax(50px, 1fr));
+    margin: 20px;
+    padding: 15px;
+    border-radius: 15px;
+    grid-gap: 15px;
+    background-color: var(--main-color);
+    overflow-y: auto;
+    border: 1px solid var(--border-color);
+}
+
+.card {
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+    padding: 5px;
+    display: grid;
+    grid-template-columns: minmax(50px, 0.5fr) minmax(150px, 4fr);
+    border: solid 1px var(--border-color);
+}
+
+.card:hover {
+    padding: 10px;
+
+}
+
+.card > p {
+    grid-column: 2 / 3;
+    background-color: var(--main-color);
+    border-radius: 15px;
+    padding: 10px;
+    margin: 5px;    
+    border: solid 1px var(--border-color);
+
+}
+
+.card-img {
+    grid-column: 1 / 2;
+    background-color: var(--main-color);
+    border-radius: 30px;
+    padding: 15px;
+    margin: 5px;
+    justify-self: center;
+    align-self: center;
+    border: solid 1px var(--border-color);
 }
 
 .header {
     grid-column: 1 / 3;
+    grid-row: 1 / 2;
     display: grid;
     grid-template-columns: minmax(300px, 4fr) minmax(100px, 1fr);
+    align-items: center;
 }
 
 .search-bar {
     grid-column: 1 / 2;
+    justify-self: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: minmax(400px, 4fr) minmax(50px, 0.5fr);
+    grid-gap: 15px;
+    max-width: 500px;
+    min-width: 50px;
+}
+
+
+.input-search-bar {
+    grid-column: 1 / 2;
+    box-sizing: border-box;
+    border: 0;
+    border-radius: 10px;
+    height: 35px;
+    width: 100%;
+    max-width: 500px;
+    padding: 25px;
+    font-size: 15px;
+    background-color: var(--main-color);
+    color: var(--font-color);
+    overflow: hidden;
+    border: solid 1px var(--border-color);
+}
+
+#search-button {
+    grid-column: 2 / 3;
+    background-image: url(icons/side-bar/magnify.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 30px;
+    background-color: var(--main-color);
+    height: 50px;
+    width: 50px;
+    border: 0;
+    border-radius: 100px;
+    justify-self: center;
+    border: solid 1px var(--border-color);
 }
 
 .profile {
     grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    background-color: var(--main-color);   
+    border-radius: 10px;
+    justify-self: center;
+    margin-right: 38px;
+    border: solid 1px var(--border-color);
+}
+
+.profile-info {
+    display: grid;
+    grid-template-columns: minmax(50px, 0.5fr) minmax(100px, 1fr);
+    align-self: center;
+    justify-self: center;
+
+}
+
+.profile-cont {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(50px, 1fr));
+    grid-gap: 10px;
+}
+
+.profile-info > .icon {
+    align-self: center;
+    justify-content: center;
+
+}
+
+#profile-photo {
+    grid-column: 2 / 3;
+    border-radius: 25px;
+    height: 70px;
+    width: auto;
+    padding: 10px;
+}
+
+#profile-name {
+    justify-self: end;
+    align-self: center;
+    font-size: 1.2rem;
+}
+
+.right-bar {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-rows: repeat(2, minmax(150px, 1fr));
+}
+
+.trending-container {
+    background-color: var(--main-color);
+    border-radius: 15px;
+    justify-self: center;
+    align-self: center;
+    display: grid;
+    grid-template-rows: minmax(20px, 0.5fr) repeat(4, minmax(60px, 3fr));
+    max-width: 300px;
+    padding: 5px;
+    border: solid 1px var(--border-color);
+}
+
+.trending-container > p {
+    justify-self: center;
+    align-self: center;
+    font-size: 1.2rem;
+}
+
+.trending-photo {
+    width: 60px;
+    height: 60px;
+    border-radius: 200px;
+    border: solid 1px var(--border-color);
+}
+
+.trending-card {
+    display: grid;
+    grid-template-columns: minmax(70px, 1fr) minmax(200px, 4fr);
+    padding: 10px;
+
+}
+
+.trending-post {
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+    align-self: center;
+    padding: 10px;
+    border: solid 1px var(--border-color);
 }
 
 .statistics-container {
-    grid-column: 2 / 3;
+    background-color: var(--main-color);
+    justify-self: center;
+    align-self: center;
+    padding: 3%;
+    border-radius: 15px;
+    display: grid;
+    grid-template-rows: minmax(30px, 1fr) repeat(4, minmax(40px, 2fr));
+    grid-gap: 15px;
+    border-radius: 15px;
+    min-width: 30%;
+    width: 70%;
+    border: solid 1px var(--border-color);
+}
+
+.statistics-container > div {
+    background-color: var(--secondary-color);
+    border-radius: 15px;
+    padding: 5px;
+    display: grid;
+    grid-template-columns: minmax(20%, 2fr) minmax(10%, 1fr);
+}
+
+
+.statistics-container > p {
+    justify-self: center;
+    align-self: center;
+    font-size: 1.2rem;
+
 }
